# meu-portifolio-landingpage

./: .gitignore  README.md  boas-praticas-landinpage.md
.claude/: settings.local.json
aidesign-kit-refatoracao-de-sites-python/: 00-contexto-compartilhado.md  README.md
aidesign-kit-refatoracao-de-sites-python/guides/: 02-guia-css-tools-debug-edicao.md  (+3 more)
template/: pyproject.toml
template/guides/: 01-guia-html-tools-debug-edicao.md  03-guia-js-tools-debug-edicao.md
template/prompts/: 01-prompt-contexto-inicial.md  02-prompt-refatoracao-html.md  03-prompt-refatoracao-css.md  05-prompt-polimento-final.md  06-prompt-auditoria-paridade.md
template/tools/common/: cli.py  css_utils.py  runtime.py
template/tools/css/: find_media_impact.py  find_tokens.md  find_tokens.py  link_html_css.py
template/tools/custom/: README.md
template/tools/html/: find_asset_usage.md  find_asset_usage.py  find_migration_issues.py  find_sections.py  query_dom.md  query_dom.py
template/tools/js/: bundle_boundary_scan.py  find_asset_references.py  find_dom_bindings.md  find_dom_bindings.py  find_scroll_timeline_clues.md  find_scroll_timeline_clues.py  find_visual_hooks.md
template/tools/parity/: capture_scroll_steps.md  capture_scroll_steps.py  compare_scroll_steps.py  compare_selector_metrics.md  compare_selector_metrics.py  page_state_matrix.py  probe_selector_metrics.md  probe_selector_metrics.py  probe_selector_screenshot.md  selector_state_capture.py
template/tools/paths/: file_focus_excerpt.md  file_focus_excerpt.py  find_paths.md  find_paths.py  path_stats.md  path_stats.py
(+915 files in other folders)
